discussion/kv_engine/184180/184180_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53042: Aggregate stats for multiple buckets

Adds a new GlobalTask called CrossBucketStatsAggregator which can be run
periodically to update the stats we care about for the quota sharing
group. I will use this task to update the memory condition checks such
that they consider the pooled watermarks and memory usage of all engines
sharing quota.

Change-Id: I755e139f2c87ed5ce3ce2d77680e72ac7dca406a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-19 09:30:03.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-19 10:01:19.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51552/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51552/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24275/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24275/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25557/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25557/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32693/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32693/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22233/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:45:34: error: out-of-line definition of "updateStat" does not match any declaration in "CrossBucketStatsAggregator" [clang-diagnostic-error]
void CrossBucketStatsAggregator::updateStat(const std::vector<E>& engines,
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:58:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, estimatedTotalMemoryUsed);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:59:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, maxDataSize);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:60:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemCurrent);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:61:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemLowWatermark);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:62:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemHighWatermark);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:89:32: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    void updateStat(const std::vector<E>& engines,
                               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22233/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:45:34:
error: out-of-line definition of "updateStat" does not match any declaration in "CrossBucketStatsAggregator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22233/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43272/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:89:32:
error: no template named "vector" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43272/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21845/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/991/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11951/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24696/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12040/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23801/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
